@@ -13,13 +13,36 @@ import static org.junit.Assert.fail;
 
 public class OAuth2AccessTokenJsonExtractorTest {
 
-    private static final String RESPONSE = "'{ \"access_token\":\"I0122HHJKLEM21F3WLPYHDKGKZULAUO4SGMV3ABKFTDT3T3X\"}'";
     private final OAuth2AccessTokenJsonExtractor extractor = OAuth2AccessTokenJsonExtractor.instance();
 
     @Test
     public void shouldParseResponse() throws IOException {
-        final OAuth2AccessToken token = extractor.extract(ok(RESPONSE));
-        assertEquals(token.getAccessToken(), "I0122HHJKLEM21F3WLPYHDKGKZULAUO4SGMV3ABKFTDT3T3X");
+        final OAuth2AccessToken token = extractor.extract(
+                ok("{ \"access_token\":\"I0122HHJKLEM21F3WLPYHDKGKZULAUO4SGMV3ABKFTDT3T3X\"}"));
+        assertEquals("I0122HHJKLEM21F3WLPYHDKGKZULAUO4SGMV3ABKFTDT3T3X", token.getAccessToken());
+    }
+
+    @Test
+    public void shouldParseScopeFromResponse() throws IOException {
+        OAuth2AccessToken token = extractor.extract(
+                ok("{ \"access_token\":\"I0122HHJKLEM21F3WLPYHDKGKZULAUO4SGMV3ABKFTDT3T4X\", "
+                        + "\"scope\":\"s1\"}"));
+        assertEquals("I0122HHJKLEM21F3WLPYHDKGKZULAUO4SGMV3ABKFTDT3T4X", token.getAccessToken());
+        assertEquals("s1", token.getScope());
+
+        token = extractor.extract(
+                ok("{ \"access_token\":\"I0122HHJKLEM21F3WLPYHDKGKZULAUO4SGMV3ABKFTDT3T5X\", "
+                        + "\"scope\":\"s1 s2\"}"));
+        assertEquals("I0122HHJKLEM21F3WLPYHDKGKZULAUO4SGMV3ABKFTDT3T5X", token.getAccessToken());
+        assertEquals("s1 s2", token.getScope());
+
+        token = extractor.extract(
+                ok("{ \"access_token\":\"I0122HHJKLEM21F3WLPYHDKGKZULAUO4SGMV3ABKFTDT3T6X\", "
+                        + "\"scope\":\"s3 s4\", "
+                        + "\"refresh_token\":\"refresh_token1\"}"));
+        assertEquals("I0122HHJKLEM21F3WLPYHDKGKZULAUO4SGMV3ABKFTDT3T6X", token.getAccessToken());
+        assertEquals("s3 s4", token.getScope());
+        assertEquals("refresh_token1", token.getRefreshToken());
     }
 
     @Test(expected = IllegalArgumentException.class)
